Full RWD, improved validation
Responsive for mobiles; checking, if all input fields is filled and removing red validation from borders and text.

--- a/html_subpages/bmi.html
+++ b/html_subpages/bmi.html
@@ -30,8 +30,7 @@
         </div>
         <a href="../main.html">
             <div class="return-btn">
-                <div class="arrow"></div>
-                <p class="return">POWRÓT</p>
+                <div class="arrow" title="Powrót"></div>
             </div>
         </a>
         <div class="container">
@@ -44,7 +43,9 @@
             <div class="row">
                     <div class="col-lg-12 col-xs-12 description">
                         <p class="description__text">
-                            Kalkulator BMI (z ang. Body Mass Index - wskaźnik masy ciała) jest prostym kalkulatorem dietetycznym działającym na podstawie matematycznego wzoru opracowanego przez belgijskiego matematyka Lamberta Adolphe’a Jacquesa Queteleta. Dzięki niemu szybko i wygodnie obliczysz swój własny wskaźnik masy ciała.
+                            Kalkulator BMI (z ang. Body Mass Index - wskaźnik masy ciała) jest prostym kalkulatorem dietetycznym działającym na podstawie matematycznego wzoru opracowanego przez belgijskiego matematyka Lamberta Adolphe’a Jacquesa Queteleta. Dzięki niemu szybko i wygodnie obliczysz swój własny wskaźnik masy ciała. 
+                            <br><br> Wzór: 
+                            <br> BMI ( <sup>kg</sup>&frasl;<sub>m2</sub> ) = masa ciała [kg] / wzrost<sup>2</sup> [m]
                         </p>
                         <div class="description__bg-decoration-left"></div>
                         <div class="description__bg-decoration-right"></div>
@@ -54,16 +55,16 @@
                 <div class="wrapper">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-12 col-xs-12 input-field">
+                            <div class="col-lg-12 col-xs-12 input-container">
                                 <p>Wzrost:</p>
-                                <input type="text" class="input__comma-change growth">
+                                <input type="text" class="input-field growth">
                                 <p>cm</p>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-12 col-xs-12 input-field">
+                            <div class="col-lg-12 col-xs-12 input-container">
                                 <p>Masa ciała:</p>
-                                <input type="text" class="input__comma-change weight">
+                                <input type="text" class="input-field weight">
                                 <p>kg</p>
                             </div>
                         </div>
