--- a/html_subpages/cpm.html
+++ b/html_subpages/cpm.html
@@ -30,8 +30,7 @@
         </div>
         <a href="../main.html">
             <div class="return-btn">
-                <div class="arrow"></div>
-                <p class="return">POWRÓT</p>
+                <div class="arrow" title="Powrót"></div>
             </div>
         </a>
         <div class="container">
@@ -44,7 +43,9 @@
             <div class="row">
                     <div class="col-lg-12 col-xs-12 description">
                         <p class="description__text">
-                            Kalkulator całkowitej przemiany materii pomoże dokładnie obliczyć przemianę materii pacjenta. Przy pomocy wzoru Mifflina lub Harrisa-Benedicta oraz wzięcia pod uwagę poziomu aktywności fizycznej osoby dla której przygotowywana jest dieta, można dokładniej określić przemianę materii. Jest to o tyle ważne, że źle dobrana do poziomu przemiany materii dieta może być niebezpieczna dla zdrowia.
+                            Kalkulator całkowitej przemiany materii pomoże dokładnie obliczyć przemianę materii pacjenta. Przy pomocy wzoru Mifflina lub Harrisa-Benedicta oraz wzięcia pod uwagę poziomu aktywności fizycznej osoby dla której przygotowywana jest dieta, można dokładniej określić przemianę materii. Jest to o tyle ważne, że źle dobrana do poziomu przemiany materii dieta może być niebezpieczna dla zdrowia. 
+                            <br><br> Wzór: 
+                            <br> CPM = PPM &times; Współczynnik Aktywności Fizycznej (PAL)
                         </p>
                         <div class="description__bg-decoration-left"></div>
                         <div class="description__bg-decoration-right"></div>
@@ -54,7 +55,7 @@
                 <div class="wrapper">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-12 col-xs-12 select-field select-field-wide">
+                            <div class="col-lg-12 col-xs-12 select-container select-container-wide">
                                 <p>Wzór na PPM:</p>
                                 <select>
                                     <option>Wzór Harrisa-Benedicta</option>
@@ -63,7 +64,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-12 col-xs-12 select-field">
+                            <div class="col-lg-12 col-xs-12 select-container">
                                 <p>Płeć:</p>
                                 <select>
                                     <option>Mężczyzna</option>
@@ -72,28 +73,28 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-12 col-xs-12 input-field">
+                            <div class="col-lg-12 col-xs-12 input-container">
                                 <p>Wzrost:</p>
-                                <input type="text" class="input__comma-change growth">
+                                <input type="text" class="input-field growth">
                                 <p>cm</p>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-12 col-xs-12 input-field">
+                            <div class="col-lg-12 col-xs-12 input-container">
                                 <p>Masa ciała:</p>
-                                <input type="text" class="input__comma-change weight">
+                                <input type="text" class="input-field weight">
                                 <p>kg</p>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-12 col-xs-12 input-field">
+                            <div class="col-lg-12 col-xs-12 input-container">
                                 <p>Wiek:</p>
-                                <input type="text" class="input__comma-change age">
+                                <input type="text" class="input-field age">
                                 <p>lat</p>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-12 col-xs-12 select-field select-field-wide">
+                            <div class="col-lg-12 col-xs-12 select-container select-container-wide">
                                 <p>Aktywność (PAL):</p>
                                 <select>
                                     <option>pacjent leżący w łóżku</option>
