--- a/main.html
+++ b/main.html
@@ -26,7 +26,9 @@
                 <div class="title__wrapper">
                     <div class="site__title">
                         <img align="left" class="rotate-briefcase" src="img/my-logo/rotate-briefcase.png" />
-                        <p class="site__title-dietitian">Dietitian</p>
+                        <p class="site__title-dietitian">
+                            Dietitian
+                        </p>
                         <p class="site__title-first">
                             first
                         </p>
