--- a/html_subpages/broca.html
+++ b/html_subpages/broca.html
@@ -30,8 +30,7 @@
         </div>
         <a href="../main.html">
             <div class="return-btn">
-                <div class="arrow"></div>
-                <p class="return">POWRÓT</p>
+                <div class="arrow" title="Powrót"></div>
             </div>
         </a>
         <div class="container">
@@ -45,6 +44,9 @@
                     <div class="col-lg-12 col-xs-12 description">
                         <p class="description__text">
                             Jest to najprostszy wzór do ustalania prawidłowej masy ciała. Broca założył, że idealna waga człowieka to wzrost w cm - 100. Wzór ten został na przestrzeni lat udoskonalony przez dietetyków.
+                            <br><br> Wzór 
+                            <br> Należna masa ciała (kobiety) = (wzrost [cm] - 100) &times; 0,85 
+                            <br> Należna masa ciała (mężczyźni) = (wzrost [cm] - 100) &times; 0,9
                         </p>
                         <div class="description__bg-decoration-left"></div>
                         <div class="description__bg-decoration-right"></div>
@@ -54,7 +56,7 @@
                 <div class="wrapper">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-12 col-xs-12 select-field">
+                            <div class="col-lg-12 col-xs-12 select-container">
                                 <p>Płeć:</p>
                                 <select>
                                     <option>Mężczyzna</option>
@@ -63,17 +65,10 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-12 col-xs-12 input-field">
+                            <div class="col-lg-12 col-xs-12 input-container">
                                 <p>Wzrost:</p>
-                                <input type="number" class="growth">
+                                <input type="text" class="input-field growth">
                                 <p>cm</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-12 col-xs-12 input-field">
-                                <p>Wiek:</p>
-                                <input type="number" class="age">
-                                <p>lat</p>
                             </div>
                         </div>
                         <div class="row">
@@ -103,6 +98,7 @@
             </form>
         </div>
     </div>
-    <script src="broca.js"></script>
+    <script type="text/javascript" src="../js_subpages/_subpages_common-validation.js"></script>
+    <script type="text/javascript" src="../js_subpages/broca.js"></script>
 </body>
 </html>
