--- a/html_subpages/harris-benedict.html
+++ b/html_subpages/harris-benedict.html
@@ -30,8 +30,7 @@
         </div>
         <a href="../main.html">
             <div class="return-btn">
-                <div class="arrow"></div>
-                <p class="return">POWRÓT</p>
+                <div class="arrow" title="Powrót"></div>
             </div>
         </a>
         <div class="container">
@@ -44,7 +43,10 @@
             <div class="row">
                     <div class="col-lg-12 col-xs-12 description">
                         <p class="description__text">
-                            Wzór Harrisa-Benedicta służy do obliczenia podstawowej przemiany materii. PPM to inaczej spoczynkowy wydatek energetyczny. Wielkość PPM zależy od wielu czynników, rzede wszystkim od powierzchni ciała mierzonej w m2. Podstawowa przemiana materii to nic innego jak najniższy poziom przemian energetycznych zachodzących w organizmie człowieka, gdy pozostaje on w stanie całkowitego spokoju fizycznego, na czczo w optymalnej temperaturze.
+                            Wzór Harrisa-Benedicta służy do obliczenia podstawowej przemiany materii. PPM to inaczej spoczynkowy wydatek energetyczny. Wielkość PPM zależy od wielu czynników, przede wszystkim od powierzchni ciała mierzonej w m<sup>2</sup>. Podstawowa przemiana materii to nic innego jak najniższy poziom przemian energetycznych zachodzących w organizmie człowieka, gdy pozostaje on w stanie całkowitego spokoju fizycznego, na czczo w optymalnej temperaturze. 
+                            <br><br> Wzór: 
+                            <br> PPM (kobiety) = 655,1 + (9,563 &times; masa ciała [kg]) + (1,85 &times; wzrost [cm]) – (4,676 &times; [wiek]) 
+                            <br> PPM (mężczyźni) = 66,5 + (13,75 &times; masa ciała [kg]) + (5,003 &times; wzrost [cm]) – (6,775 &times; [wiek])
                         </p>
                         <div class="description__bg-decoration-left"></div>
                         <div class="description__bg-decoration-right"></div>
@@ -54,7 +56,7 @@
                 <div class="wrapper">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-12 col-xs-12 select-field">
+                            <div class="col-lg-12 col-xs-12 select-container">
                                 <p>Płeć:</p>
                                 <select>
                                     <option>Mężczyzna</option>
@@ -63,23 +65,23 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-12 col-xs-12 input-field">
+                            <div class="col-lg-12 col-xs-12 input-container">
                                 <p>Wzrost:</p>
-                                <input type="text" class="input__comma-change growth">
+                                <input type="text" class="input-field growth">
                                 <p>cm</p>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-12 col-xs-12 input-field">
+                            <div class="col-lg-12 col-xs-12 input-container">
                                 <p>Masa ciała:</p>
-                                <input type="text" class="input__comma-change weight">
+                                <input type="text" class="input-field weight">
                                 <p>kg</p>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-12 col-xs-12 input-field">
+                            <div class="col-lg-12 col-xs-12 input-container">
                                 <p>Wiek:</p>
-                                <input type="text" class="input__comma-change age">
+                                <input type="text" class="input-field age">
                                 <p>lat</p>
                             </div>
                         </div>
