--- a/html_subpages/pral.html
+++ b/html_subpages/pral.html
@@ -30,8 +30,7 @@
         </div>
         <a href="../main.html">
             <div class="return-btn">
-                <div class="arrow"></div>
-                <p class="return">POWRÓT</p>
+                <div class="arrow" title="Powrót"></div>
             </div>
         </a>
         <div class="container">
@@ -45,6 +44,8 @@
                     <div class="col-lg-12 col-xs-12 description">
                         <p class="description__text">
                             Dzięki kalkulatorowi PRAL możesz określić czy dany produkt podnosi poziom kwasu nerkowego (produkt zakwaszający) bądź czy zmniejsza jego poziom (produkt alkalizujący). 
+                            <br><br> Wzór:
+                            <br> PRAL = (0,49 &times; białko [g] + 0,037 &times; fosfor [mg]) – <br> (0,021 &times; potas [mg] - 0,026 &times; magnez [mg] - 0,013 &times; wapń [mg])
                         </p>
                         <div class="description__bg-decoration-left"></div>
                         <div class="description__bg-decoration-right"></div>
@@ -54,37 +55,37 @@
                 <div class="wrapper">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-12 col-xs-12 input-field">
+                            <div class="col-lg-12 col-xs-12 input-container">
                                 <p>Białko:</p>
-                                <input type="number" class="growth">
-                                <p>g</p>
+                                <input type="text" class="input-field">
+                                <p>g &nbsp;</p>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-12 col-xs-12 input-field">
+                            <div class="col-lg-12 col-xs-12 input-container">
                                 <p>Fosfor:</p>
-                                <input type="number" class="weight">
+                                <input type="text" class="input-field">
                                 <p>mg</p>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-12 col-xs-12 input-field">
+                            <div class="col-lg-12 col-xs-12 input-container">
                                 <p>Potas:</p>
-                                <input type="number" class="age">
+                                <input type="text" class="input-field">
                                 <p>mg</p>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-12 col-xs-12 input-field">
+                            <div class="col-lg-12 col-xs-12 input-container">
                                 <p>Magnez:</p>
-                                <input type="number" class="age">
+                                <input type="text" class="input-field">
                                 <p>mg</p>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-12 col-xs-12 input-field">
+                            <div class="col-lg-12 col-xs-12 input-container">
                                 <p>Wapń:</p>
-                                <input type="number" class="age">
+                                <input type="text" class="input-field">
                                 <p>mg</p>
                             </div>
                         </div>
@@ -97,8 +98,9 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-12 col-xs-12">
-                                <div class="score">
+                                <div class="score score__longer">
                                     <p>Wynik:</p>
+                                    <p></p>
                                     <p></p>
                                 </div>
                             </div>
@@ -115,6 +117,7 @@
             </form>
         </div>
     </div>
-    <script src="pral.js"></script>
+    <script type="text/javascript" src="../js_subpages/_subpages_common-validation.js"></script>
+    <script type="text/javascript" src="../js_subpages/pral.js"></script>
 </body>
 </html>
