--- a/html_subpages/broca.html
+++ b/html_subpages/broca.html
@@ -23,19 +23,19 @@
 <link rel="shortcut icon" href="../img/my-logo/rotate-briefcase.png">
 <body>
     <div class="container-fluid">
-        <div class="social-icons">
+        <div class="social-icons animated fadeIn">
             <a href="https://www.facebook.com/pawelr93" target="_blank" class="fa fa-facebook"></a>
             <a href="https://github.com/PawelRod" target="_blank" class="fa fa-github"></a>
             <a class="fa fa-linkedin"></a>
         </div>
         <a href="../main.html">
             <div class="return-btn">
-                <div class="arrow" title="Powrót"></div>
+                <div class="arrow animated fadeInDown" title="Powrót"></div>
             </div>
         </a>
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 col-xs-12">
+                <div class="col-lg-12 col-xs-12 animated fadeInDown">
                     <!-- <img align="left" class="rotate-briefcase" src="../img/my-logo/rotate-briefcase.png" /> -->
                     <h1 class="subpage-title">WZÓR BROCA</h1>
                 </div>
