--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 <link rel="shortcut icon" href="img/my-logo/rotate-briefcase.png">
 <body class="background">
     <div class="container-fluid">
-        <div class="social-icons">
+        <div class="social-icons animated fadeIn">
             <a href="https://www.facebook.com/pawelr93" target="_blank" class="fa fa-facebook"></a>
             <a href="https://github.com/PawelRod" target="_blank" class="fa fa-github"></a>
             <a class="fa fa-linkedin"></a>
@@ -24,7 +24,7 @@
         <div class="container">
             <div class="row logo-height">
                 <div class="title__wrapper">
-                    <div class="site__title">
+                    <div class="site__title animated fadeInDown">
                         <img align="left" class="rotate-briefcase" src="img/my-logo/rotate-briefcase.png" />
                         <p class="site__title-dietitian">
                             Dietitian
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12 col-xs-12 description">
+                <div class="col-lg-12 col-xs-12 description animated fadeIn">
                     <p class="description__text">
                         Kalkulatory dietetyczne dostępne poniżej wykorzystują zaawansowane algorytmy opracowane na podstawie wzorów i tabel używanych przez najlepszych specjalistów z dziedziny dietetyki. Z ich pomocą m.in. z łatwością dokonasz aktualnej analizy masy ciała czy poziomu tkanki tłuszczowej. Dzięki nim poznasz również swoje dzienne zapotrzebowanie kaloryczne.
                     </p>
@@ -60,7 +60,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 col-xs-12">
-                        <div class="button__show-hide">
+                        <div class="button__show-hide animated fadeIn">
                             <img class="eye-img-show" src="img/my-logo/eye-show.png">
                             <img class="eye-img-hide" src="img/my-logo/eye-hide.png">
                             <p>POKAŻ<br>WSZYSTKO</p>
@@ -68,7 +68,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-6 col-xs-12 buttons-margin">
+                <div class="col-lg-6 col-xs-12 buttons-margin animated fadeInLeft">
                     <a href="html_subpages/bmi.html">
                         <div class="button button__bmi">
                             <p class="button__title">BMI</p>
@@ -80,7 +80,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-6 col-xs-12 buttons-margin">
+                <div class="col-lg-6 col-xs-12 buttons-margin animated fadeInRight">
                     <a href="html_subpages/cpm.html">
                         <div class="button button__cpm">
                             <p class="button__title">CPM</p>
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-6 col-xs-12 buttons-margin">
+                <div class="col-lg-6 col-xs-12 buttons-margin animated fadeInLeft">
                     <a href="html_subpages/harris-benedict.html">
                         <div class="button button__harris-benedict">
                             <p class="button__title">PPM - wzór Harrisa-Benedicta</p>
@@ -106,7 +106,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-6 col-xs-12 buttons-margin">
+                <div class="col-lg-6 col-xs-12 buttons-margin animated fadeInRight">
                     <a href="html_subpages/mifflin.html">
                         <div class="button button__mifflin">
                             <p class="button__title">PPM - wzór Mifflina</p>
@@ -120,7 +120,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-6 col-xs-12 buttons-margin">
+                <div class="col-lg-6 col-xs-12 buttons-margin animated fadeInLeft">
                     <a href="html_subpages/glycemic-load.html">
                         <div class="button button__glycemic">
                             <p class="button__title">Ładunek Glikemiczny</p>
@@ -132,7 +132,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-6 col-xs-12 buttons-margin">
+                <div class="col-lg-6 col-xs-12 buttons-margin animated fadeInRight">
                     <a href="html_subpages/ymca.html">
                         <div class="button button__ymca">
                             <p class="button__title">YMCA</p>
@@ -146,7 +146,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-6 col-xs-12 buttons-margin">
+                <div class="col-lg-6 col-xs-12 buttons-margin animated fadeInLeft">
                     <a href="html_subpages/broca.html">
                         <div class="button button__broc">
                             <p class="button__title">Wzór Broca</p>
@@ -158,7 +158,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-6 col-xs-12 buttons-margin">
+                <div class="col-lg-6 col-xs-12 buttons-margin animated fadeInRight">
                     <a href="html_subpages/lorentz.html">
                         <div class="button button__lorentz">
                             <p class="button__title">Wzór Lorentza</p>
@@ -172,7 +172,7 @@
                 </div>
             </div>
             <div class="row buttons-last-row-margin">
-                <div class="col-lg-6 col-xs-12 buttons-margin">
+                <div class="col-lg-6 col-xs-12 buttons-margin animated fadeInLeft">
                     <a href="html_subpages/whr.html">
                         <div class="button button__whr">
                             <p class="button__title">WHR</p>
@@ -184,7 +184,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-6 col-xs-12 buttons-margin">
+                <div class="col-lg-6 col-xs-12 buttons-margin animated fadeInRight">
                     <a href="html_subpages/pral.html">
                         <div class="button button__pral">
                             <p class="button__title">PRAL</p>
